--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,6 +73,58 @@
     "\n",
     "# reflect the tables\n",
     "Base.prepare(engine, reflect=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__abstract__',\n",
+       " '__class__',\n",
+       " '__delattr__',\n",
+       " '__dict__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__le__',\n",
+       " '__lt__',\n",
+       " '__module__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " '__weakref__',\n",
+       " '_decl_class_registry',\n",
+       " '_sa_decl_prepare',\n",
+       " '_sa_raise_deferred_config',\n",
+       " 'classes',\n",
+       " 'metadata',\n",
+       " 'prepare']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dir(Base)"
    ]
   },
   {
@@ -2699,13 +2751,6 @@
    "source": [
     "# Write a function called `calc_temps` that will accept start date and end date in the format '%Y-%m-%d' \n",
     "# and return the minimum, average, and maximum temperatures for that range of dates\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Challenge"
    ]
   },
   {
@@ -24131,7 +24176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -25683,7 +25728,9 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -25773,8 +25820,15 @@
    "source": [
     "# Key differences in June & Dec Weather \n",
     "\n",
-    "#in the Jupyter Notebook with a few sentences describing the key differences \n",
-    "# in weather between June and December\n",
+    "The statistical summary is for June month for all stations shows that the Std is 0.33 and have maximum precipitation of 4.43 whereas for Dec month Std is 0.54 with a maximum precipitation of 6.42. Also Precipitation Mean increased by 0.0805 between June to December, which indicates that June weather is slightly better compartivie to Dec month. MOre or less, both months have highest number of precipitation through out the year, still scalable for business initation.\n",
+    "\n",
+    "# Recommendations:\n",
+    "\n",
+    "In the module, we have conducted only last one year data and the weather data is between years 2010 to 2017, its better to compare atleast last 5 years data for highest precipitation months and provide more concrete support to analysis.\n",
+    "\n",
+    "Another approach would be another turist location(s) analysis with least amount of precition for more than 8 - 9 months (year around).\n",
+    "\n",
+    "\n",
     "\n"
    ]
   },
@@ -25804,7 +25858,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
