--- a/climate_analysis.ipynb
+++ b/climate_analysis.ipynb
@@ -25820,13 +25820,17 @@
    "source": [
     "# Key differences in June & Dec Weather \n",
     "\n",
-    "The statistical summary is for June month for all stations shows that the Std is 0.33 and have maximum precipitation of 4.43 whereas for Dec month Std is 0.54 with a maximum precipitation of 6.42. Also Precipitation Mean increased by 0.0805 between June to December, which indicates that June weather is slightly better compartivie to Dec month. MOre or less, both months have highest number of precipitation through out the year, still scalable for business initation.\n",
+    "The statistical summary is for June month for all stations shows that the Std is 0.33 and have maximum precipitation of 4.43 whereas for Dec month Std is 0.54 with a maximum precipitation of 6.42. Also Precipitation Mean increased by 0.0805 between June to December, which indicates that June weather is slightly better compartivie to Dec month. More or less, both months have highest number of precipitation through out the year, still scalable for business initation.\n",
     "\n",
     "# Recommendations:\n",
     "\n",
     "In the module, we have conducted only last one year data and the weather data is between years 2010 to 2017, its better to compare atleast last 5 years data for highest precipitation months and provide more concrete support to analysis.\n",
     "\n",
-    "Another approach would be another turist location(s) analysis with least amount of precition for more than 8 - 9 months (year around).\n",
+    "Another approach would be considering other near by tourist location(s) analysis between the seasons and compare with our prime location.\n",
+    "\n",
+    "To support Business Idea, conduct further analysis between off season or year around data to understand weather patterns.\n",
+    "\n",
+    "Backing up with data with Population or age groups data to attract customers for icecream shops could be another stratergy to sustain business model for off seasons.\n",
     "\n",
     "\n",
     "\n"
@@ -25858,7 +25862,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
